# KAN-TRaCE-Temporal-Reasoning-System-for-CXR

./: .gitignore  README.md  pyproject.toml  selected_patient_splits.json
docs/: 00a0c66b-3aaa2d73-42f00fab-b5dfca41-e5a769c6_SceneGraph.json  29_bboxes.md  RULE_PARSER_REPORT.md  VERA_llm_parser_prior_report.md  VERA_methodology_concerns.md  VERA_phase2_yolo_results.md  VERA_phase_3_4_5_spec.md  flow.md  phase2_progress.md  phase_3_4_mlp_update.md  phase_5_new.md
metadata/: __init__.py  build_chexplus_metadata.py  build_mimic_metadata.py  build_nih_metadata.py  chexplpus_metadata_final.jsonl  chexplus_splits.csv  mimic-cxr-2.0.0-metadata.csv  mimic_metadata_final.jsonl  unify_labels_21dim.py
mock_metadata/: chexplus_mock.jsonl  mimic_mock.jsonl  nih_mock.jsonl
preprocess/: dataset.py  main.py  mimic_dataset.py  mimic_main.py  nih_main.py  utils.py
preprocess/download/: dataset.py  main.py  mimic.bat  mimic_dataset.py  mimic_main.py  nih_dataset.py  nih_main.py  rclone_utils.py
preprocess/metadata/: README.md  build_nih_metadata.py  build_nih_reports.py  mimic_metadata.py  normalize_existing_metadata.py
preprocess/metadata_generator/: UNIFIED_LABELS_GUIDE.md  __init__.py  build_chexplus_metadata.py  build_mimic_metadata.py  build_nih_metadata.py
preprocess/scene_graph/: build_chexplus_splits.py  extract_scene_graph.py
preprocess/structure/: 5000_token.py  50_line.py  auto_extract_chunks.py  current_data_status.md  finding.py  merge.py  (+5 more)
scene_graph/: extract_scene_graph.py
structure/: chexplus.py  count_words.py  model_wrapper.py  nih.py  train_biovilt.py
(+34 files in other folders)
